--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <h1>hello world 11</h1>
 <app-rooms></app-rooms>
 
+<div class="">
+  <!-- <ng-template #user>
+    <app-rooms></app-rooms>
+  </ng-template>
+</div> -->
+
+<div class="" #hotelName></div>
+
 <div [ngSwitch]="role" >
   <div *ngSwitchCase="'User'">Welcome user</div>
   <div *ngSwitchCase="'Admin'">Welcome Admin</div>
