--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,13 @@
-<h1>hello world 11</h1>
-<app-rooms></app-rooms>
+<!-- <h1>hello world 11</h1> -->
+<!-- <app-rooms></app-rooms> -->
+<app-school></app-school>
 
-<div class="">
-  <!-- <ng-template #user>
-    <app-rooms></app-rooms>
-  </ng-template>
-</div> -->
+<!-- <div class="">
+  <div class="" #hotelName></div>
 
-<div class="" #hotelName></div>
-
-<div [ngSwitch]="role" >
-  <div *ngSwitchCase="'User'">Welcome user</div>
-  <div *ngSwitchCase="'Admin'">Welcome Admin</div>
-  <div *ngSwitchDefault>
-    you are not autherised  
+  <div [ngSwitch]="role">
+    <div *ngSwitchCase="'User'">Welcome user</div>
+    <div *ngSwitchCase="'Admin'">Welcome Admin</div>
+    <div *ngSwitchDefault>you are not autherised</div>
   </div>
-
-
-</div>
+</div> -->
