data sharing in two compenents by using services

--- a/src/app/school/school.component.html
+++ b/src/app/school/school.component.html
@@ -8,4 +8,6 @@
   {{ item["name"] }} : Garde {{ item["grade"] }}
 </div>
 
-<app-add-new-class></app-add-new-class>
+<!-- <app-add-new-class></app-add-new-class> -->
+<app-comp1></app-comp1>
+<app-comp2></app-comp2>
